syntax = "proto3";
package myservice;
option go_package = "grpc-gateway/myservice/myservice";

message StringMessage {
string value = 1;
}

service MyService {
rpc Echo(StringMessage) returns (StringMessage) {}
}